# Tools

./: .gitignore  LICENSE  README.md  bi_alicia_d_record.sh  bi_alicia_d_test.sh  config.json  dataset_process.py  dataset_process.sh  get_bi_alicia_d_idle.sh  hil_test.py  hil_test.sh  hil_test_debug.sh  main.py  serve_so101_robot.sh  single_alicia_d_record.sh  so101_record.sh  so101_teleoperate.sh  so101_test.sh  test.py  test_client.py
Go2-Tools/client/: websocket_sender_go2.py
Go2-Tools/front_camera/src/: front_camera.cpp  front_camera_test.cpp
LLM-Tools/models/spark/: model.py
PuppyPi-Demo/: flask_client_test.py
Robot-Arm-Tools/: README.md
Robot-Arm-Tools/openpi_client/: websocket_policy_server.py
SO101-Tools/: .gitignore  README.md  main.py  test.sh
SO101-Tools/calibration/teleoperators/so101_leader/: my_awesome_leader_arm.json
TonyPi-Demo/: KickBall_demo.py  README.md
Wheeltec-Tools/: position_sender_wheeltec.py
asr/iflytek/: iat.py
calibration/dataset/: offset_config_so101_pap151_20260321.yaml
calibration/robots/so101_follower/: my_awesome_follower_arm.json
client/: integrated_sender.py  perception_node.py  position_sender_go2.py
dog/: agent_input_flask_new.py  demo.py  os_api.launch  os_api_call.py  start_lite.launch
front_camera/: CMakeLists.txt
front_camera/scripts/: front_camera.py  test.py
src/: dataset_process.py  get_idle_action.py  main.py  so101_robot_server.py
